<?xml version="1.0"?>
<package format="3">
  <name>arm_config</name>
  <version>0.0.1</version>
  <description>Shared controller and MoveIt configuration for the 4-DOF arm.</description>

  <maintainer email="eli-griffin@example.com">Eli Griffin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
